--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.2.9",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
@@ -18,7 +19,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "embla-carousel-react": "^8.0.0-rc22",
-    "firebase": "^10.8.0",
+    "firebase": "^10.6.0",
+    "framer-motion": "^11.0.6",
     "lucide-react": "^0.330.0",
     "next": "14.1.0",
     "next-themes": "^0.2.1",
