--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "embla-carousel-react": "^8.0.0-rc22",
     "firebase": "^10.6.0",
     "framer-motion": "^11.0.6",
@@ -26,6 +28,7 @@
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-resizable-panels": "^2.0.9",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
