--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "export": "next export"
   },
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
